# Xiangyu-Han

./: .gitignore  README.md  pyproject.toml  week02_lecture.ipynb
Final_Project/: .md  crash_env  final_project.md
Final_Project/.ipynb_checkpoints/: Vignettes-checkpoint.ipynb
Final_Project/nyc_crash_api/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Final_Project/nyc_crash_api/docs/: Makefile  conf.py  example.ipynb  make.bat
Final_Project/nyc_crash_api/src/nyc_crash_api/: __init__.py  nyc_crash_api.py
Final_Project/nyc_crash_api/tests/: test_1.py  test_nyc_crash_api.py
hw01/: hw01.ipynb  myscript.py
hw01/.ipynb_checkpoints/: hw01-checkpoint.ipynb
hw02/: hw02.ipynb
hw02/.ipynb_checkpoints/: hw2-checkpoint.ipynb
hw02/Data/: binge_clean.csv
hw03/: hw03.ipynb
hw04/.ipynb_checkpoints/: hw04-checkpoint.ipynb
hw05/.ipynb_checkpoints/: HW05 XiangyuHan-checkpoint.ipynb
hw06/: hw06 XiangyuHan.ipynb  test_cipher_class.py
hw07/: hw07 Xiangyu Han.ipynb
hw08/: .gitignore  data.csv  hw08 Xiangyu Han.ipynb
hw08/.ipynb_checkpoints/: hw08 Xiangyu Han-checkpoint.ipynb
hw09/: hw09.ipynb
hw09/.ipynb_checkpoints/: hw09-checkpoint.ipynb
