[tool.poetry]
name = "nyc_crash_api"
version = "0.13.0"
description = "A package to get data from NYC collision open data"
authors = ["Xiangyu Han <clefthan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.1.5"
geopandas = "^0.10.2"
numpy = "^1.18.0"
matplotlib = "^3.3.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
